--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <!-- Выпадающий список для Города -->
             <div class="mb-3">
                 <label for="city" class="form-label">Город</label>
-                <select id="city" class="form-select chosen-select" multiple>
+                <select id="city" data-placeholder="Выберите город" class="form-select chosen-select" multiple>
                     <!-- Города будут загружаться через API -->
                 </select>
             </div>
@@ -40,11 +40,11 @@
             <!-- Выпадающий список для Профессии -->
             <div class="mb-3">
                 <label for="profession" class="form-label">Профессия</label>
-                <select id="profession" class="form-select chosen-select" multiple>
+                <select id="profession" data-placeholder="Выберите профессию" class="form-select chosen-select" multiple>
                     <!-- Профессии будут загружаться через API -->
                 </select>
             </div>
-
+		
             <!-- Поле для поиска по Аннотации -->
             <div class="mb-3">
                 <label for="annotation" class="form-label">Аннотация</label>
