--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
             <!-- Поле для Имени -->
             <div class="mb-3">
                 <label for="firstName" class="form-label">Имя</label>
-                <input type="text" class="form-control" id="firstName" placeholder="Введите имя">
+                <input type="text" class="form-control" id="firstName" placeholder="Поиск по имени">
             </div>
 
             <!-- Поле для Фамилии -->
             <div class="mb-3">
                 <label for="lastName" class="form-label">Фамилия</label>
-                <input type="text" class="form-control" id="lastName" placeholder="Введите фамилию">
+                <input type="text" class="form-control" id="lastName" placeholder="Поиск по фамилии">
             </div>
 
             <!-- Выпадающий список для Города -->
             <div class="mb-3">
                 <label for="city" class="form-label">Город</label>
-                <select id="city" data-placeholder="Выберите город" class="form-select chosen-select" multiple>
+                <select id="city" data-placeholder="Поиск по городу" class="form-select chosen-select" multiple>
                     <!-- Города будут загружаться через API -->
                 </select>
             </div>
@@ -40,7 +40,7 @@
             <!-- Выпадающий список для Профессии -->
             <div class="mb-3">
                 <label for="profession" class="form-label">Профессия</label>
-                <select id="profession" data-placeholder="Выберите профессию" class="form-select chosen-select" multiple>
+                <select id="profession" data-placeholder="Поиск по профессии" class="form-select chosen-select" multiple>
                     <!-- Профессии будут загружаться через API -->
                 </select>
             </div>
